--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -4,8 +4,6 @@
 
   <title>Shuhan Zhou: Divvy Bike Final Project </title>
 
-  <link href='https://cdn-img-0.wanelo.com/p/8fd/007/41f/20db4412caa50d6eadb4438/x354-q80.jpg' type='text/css'>
-
 <style>
 * { font-family: 'Open Sans', sans-serif; }
 
@@ -68,7 +66,7 @@ th, td {
 }
 
 h1 {
-  color: darkred;
+  color: grey;
 }
 
 h2 {
@@ -90,10 +88,10 @@ h4 {
 <body>
 
 <ul class="nav">
-  <li><a href="#Home" class = "active">Home</a></li>
-  <li><a href="#Teaching">Teaching</a></li>
-  <li><a href="#Research">Research</a></li>
-  <li><a href="#FUN">FUN</a></li>
+  <li><a href="#Motivation" class = "active">Motivation</a></li>
+  <li><a href="#Data">Data</a></li>
+  <li><a href="#Investigation">Investigation</a></li>
+  <li><a href="#Conclusion">Conclusion</a></li>
 </ul>
 
 <h1><em> Motivation </em></h1>
