--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -106,6 +106,8 @@ This project aims at investigating user behavior variations according to the use
 of the service popularity as well as the association with neighborhood socio-economic attributes. 
 
 <p>
+	
+This section needs to be removed in the future
 
 <table>
   <tr><th>Strengths</th>        <th>Weakness</th></tr>
@@ -125,13 +127,16 @@ of the service popularity as well as the association with neighborhood socio-eco
 <div id = "Data">
 
 
-	<h2><em>Most Graduate Students Have Teaching Experience</em></h2>
+<h2><em> Data </em></h2>
 
-	<p>
+<p>
 
-	I have taught SAT Math at a local high school and Chinese Language and Culture at UC Berkeley.
+Due to the extremely large size (over 10million rows in csv) of data for all years available (2013-2017) is beyond the scope of this project's capacity without 
+adding much benefit to the analysis, I decided to focus the analysis on 2017. The dataset used can be downloaded from 
+Divvy Bike's official website:<a href=https://www.divvybikes.com/system-data>here</a>.
 
-	<p>
+
+<p>
 
 </div>
 
