--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -94,30 +94,20 @@ h4 {
   <li><a href="#Conclusion">Conclusion</a></li>
 </ul>
 
-<h1><em> Motivation </em></h1>
+<h1><em> Issue and Motivation </em></h1>
 
 <p>
-In 2013, Divvy Bikes launched its service in the Chicago area. Divvy bikes provide convenient bike rental services that allow 
-both one time user and subscribers to check out and return bikes from and to any divvy bike station. 
+In 2013, Divvy Bikes launched its service in the Chicago area. Divvy bikes provide convenient bike rental services that allow both one time user and subscribers to check out and return bikes from and to any divvy bike station. 
+
+According to observations, there are around 10 divvy stations in Hyde Park but HP is not an area famous for its resident's income. Why would a relatively high end bike rental service target this neighborhood? Is it to benefit the student community there who do not have access to automobiles and like to embrace new tech products?
+
+In order to answer questions like this, we need to investigate user behaviors in divvy bike usage as well as what neighborhood characteristics potentially determine the availibity of divvy bikes.
 
 <p>
-
-This project aims at investigating user behavior variations according to the user characteristics available, seasonal variation
-of the service popularity as well as the association with neighborhood socio-economic attributes. 
 
 <p>
 	
-This section needs to be removed in the future
-
-<table>
-  <tr><th>Strengths</th>        <th>Weakness</th></tr>
-  <tr><td>Attention to Detail</td>       <td>Narrow Minded</td></tr>
-  <tr><td>Ambitious</td>     <td>Don't work hard enough</td></tr>
-  <tr><td>Intellectually Curious</td>  <td>Socially Inmature</td></tr>
-  <tr><td>Funny</td>      <td>Only tell one kind of jokes</td></tr>
-  <tr><td>More to be Discovered...</td> <td>Enjoys talking about herself</td></tr>
-</table>
-
+In this project, I analyze the number of trips undertaken by various populations, during different time or season of the year, correlation between where divvy stations are located with how popular they are, and last but least, the role income, racial, age snapshot of a census tract plays in determining divvy bike's availibility. 
 
 <p>
 
@@ -131,9 +121,21 @@ This section needs to be removed in the future
 
 <p>
 
-Due to the extremely large size (over 10million rows in csv) of data for all years available (2013-2017) is beyond the scope of this project's capacity without 
-adding much benefit to the analysis, I decided to focus the analysis on 2017. The dataset used can be downloaded from 
-Divvy Bike's official website:<a href=https://www.divvybikes.com/system-data>here</a>.
+Due to the extremely large size (over 10million rows in csv) of data for all years available (2013-2017) is beyond the scope of this project's capacity without adding much benefit to the analysis, I decided to focus the analysis on 2017. The dataset used can be downloaded from 
+
+<strong> Divvy Bike Trip from its official website </strong> : <a href=https://www.divvybikes.com/system-data>here</a>
+
+
+<strong> Divvy Bike Station from City of Chicago's Data Portal </strong> : <a href=https://data.cityofchicago.org/Transportation/Divvy-Bicycle-Stations-All-Map/bk89-9dk7/data>here</a>
+
+
+
+<strong> Income by Census Tract: 2011-2015 American Community Survey 5-Year Estimates </strong> : <a href=https://factfinder.census.gov/faces/tableservices/jsf/pages/productview.xhtml?src=bkmk>here</a>
+
+
+<strong> Socio-Demographic Data by Census Tract: 2010 US Census Demographic Profile shapefile format</strong> : <a href=https://www.census.gov/geo/maps-data/data/tiger-data.html>here</a>
+
+<strong> Illinois Census Tract Shapefile </strong> : <a href=https://www.census.gov/geo/maps-data/data/cbf/cbf_tracts.html>here</a>
 
 
 <p>
