--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -99,17 +99,24 @@ h4 {
 <p>
 In 2013, Divvy Bikes launched its service in the Chicago area. Divvy bikes provide convenient bike rental services that allow both one time user and subscribers to check out and return bikes from and to any divvy bike station. 
 
-According to observations, there are around 10 divvy stations in Hyde Park but HP is not an area famous for its resident's income. Why would a relatively high end bike rental service target this neighborhood? Is it to benefit the student community there who do not have access to automobiles and like to embrace new tech products?
-
-In order to answer questions like this, we need to investigate user behaviors in divvy bike usage as well as what neighborhood characteristics potentially determine the availibity of divvy bikes.
+</p>
 
 <p>
+According to observations, there are around 10 divvy stations in Hyde Park but HP is not an area famous for its resident's income. Why would a relatively high end bike rental service target this neighborhood? Is it to benefit the student community there who do not have access to automobiles and like to embrace new tech products?
+
+
+</p>
+
+<p>
+In order to answer questions like this, we need to investigate user behaviors in divvy bike usage as well as what neighborhood characteristics potentially determine the availibity of divvy bikes.
+
+</p>
 
 <p>
 	
 In this project, I analyze the number of trips undertaken by various populations, during different time or season of the year, correlation between where divvy stations are located with how popular they are, and last but least, the role income, racial, age snapshot of a census tract plays in determining divvy bike's availibility. 
 
-
+</p>
 
 
 <div id = "Data">
@@ -167,16 +174,19 @@ In particular, I am using male/female  median age, number of residents over 16, 
 </div>
 
 
+
+
 <div id = "Investigation">
 
 
-	<h3><em>Most Graduate Students Also Do Research</em></h3>
+<h3><em>Investigation </em></h3>
 
-	<p>
+	
 
-	I hope to investigate how humanity and social outcomes interact.
 
-	<p>
+
+
+
 
 </div>
 
@@ -185,16 +195,14 @@ In particular, I am using male/female  median age, number of residents over 16, 
 
 <div id = "Conclusion">
 
-	<h4><em>Humanity, Social Science and Art are all Beautiful</em></h4>
+
+<h4><em>Conclusion and Recommendations</em></h4>
 
 
-	<p>
-
-	I look at artworks for fun.
-	<p>
 
 	
-	</p>
+
+
 </div>
 
 
