--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -94,7 +94,10 @@ h4 {
   <li><a href="#Conclusion">Conclusion</a></li>
 </ul>
 
-<h1><em> Issue and Motivation </em></h1>
+<h1><em> Divvy Bike and Income </em></h1>
+
+
+<div id = "Issue and Motivation">
 
 <p>
 In 2013, Divvy Bikes launched its service in the Chicago area. Divvy bikes provide convenient bike rental services that allow both one time user and subscribers to check out and return bikes from and to any divvy bike station. 
@@ -122,7 +125,7 @@ In this project, I analyze the number of trips undertaken by various populations
 <div id = "Data">
 
 
-<h2><em> Data </em></h2>
+<h1><em> Data </em></h1>
 
 <p>
 
