--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -125,7 +125,7 @@ In this project, I analyze the number of trips undertaken by various populations
 <div id = "Data">
 
 
-<h1><em> Data </em></h1>
+<h2><em> Data </em></h2>
 
 <p>
 
@@ -184,7 +184,41 @@ In particular, I am using male/female  median age, number of residents over 16, 
 
 <h3><em>Investigation </em></h3>
 
+
+<p>
+<strong> Analysis of Divvy Trips </strong> : code for this part is included in a single jupyter notebook: Need to add link to this notebook
+</p>
 	
+<p>
+First, due to the data collection process, there is systematic missingness in the user age and user gender because one time user (what they call customers) do not report such information. 
+
+</p>
+
+
+<p>
+Overall, there are significantly more trips under taken by subscribers, males and people in their late 20s. Trip duration wise, on average, female users true to use divvy bikes 2 mins longer whereas there is no obvious variation in trip duration by age groups. 
+
+</p>
+
+<p>
+
+Customers on average on each trip use divvy bikes 20 mins more than subscribers. Economic intuition can explain this phenomenon: once the "customer" paid their fees, it became a sunk cost, and they want to make the most out of this one time use. Whereas subscribers pay a monthly fee and use divvy bikes more regularly; they can benefit from the number of trips, not necessarily the duration of the trips.
+
+</p>
+
+
+<p> In terms of time when trips happen, people make more trips (i.e. use divvy bikes more) during weekdays, rush hours and in spring/summer. The seasonality is probably due to temperature since when it is nice and people will enjoy being outside. The data also suggests average trip duration significantly increase for spring and summer time. 
+
+</p>
+
+<p> However, average trip duration is longer for the weekends maybe people ride divvy on the weekends as a leisure activity instead of as a transportation means compared to during weekdays. Within a day, trip duration is the highest in the middle of the day and after midnight. I have a hard time rationalizing the last observation.
+
+</p>
+
+
+
+
+Remember to include pictures here!!!!!
 
 
 
