--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -198,14 +198,25 @@ Overall, there are significantly more trips under taken by subscribers, males an
 
 </p>
 
+
+<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/TripDuration_byAge.png">
+
 <p>
 
 Customers on average on each trip use divvy bikes 20 mins more than subscribers. Economic intuition can explain this phenomenon: once the "customer" paid their fees, it became a sunk cost, and they want to make the most out of this one time use. Whereas subscribers pay a monthly fee and use divvy bikes more regularly; they can benefit from the number of trips, not necessarily the duration of the trips.
+
+<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/TripDuration_byUserType.png">
 
 </p>
 
 
 <p> In terms of time when trips happen, people make more trips (i.e. use divvy bikes more) during weekdays, rush hours and in spring/summer. The seasonality is probably due to temperature since when it is nice and people will enjoy being outside. The data also suggests average trip duration significantly increase for spring and summer time. 
+
+<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/TripDuration_byHour.png">
+<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/Trip_Duration_by_Day.png">
+<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/Trip_Duration_by_Date.png">
+<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/Trip_Duration_by_Month.png">
+
 
 </p>
 
@@ -221,7 +232,9 @@ Remember to include pictures here!!!!!
 
 
 <p>
-<strong> Divvy Trips and Divvy Station </strong> : code for this part is included in a single jupyter notebook: Need to add link to this notebook
+<strong> Divvy Trips and Divvy Station </strong> : code for this part is included in a single jupyter notebook: <a href= "https://github.com/shuhan-zhou/divvy_new/blob/master/Trips_Stations.ipynb"> Divvy Trips and Stations </a>
+
+
 </p>
 
 <p> By iterating over station name and summarize the number of trips start and end at each station, I am able to get the top five popular stations to start trips and end trips. Four of these stations are on both lists. These stations are mostly located near office buildings, public transporations with one located on lakeshore front, which is used by people to bike along the lake. This verifies our assumption that divvy bike is mostly used by commuters for the last mile. 
@@ -247,7 +260,8 @@ Add graph here
 
 
 <p>
-<strong> Spatial Analysis </strong> : code for this part and the next part is included in a single jupyter notebook: Need to add link to this notebook
+<strong> Spatial Analysis </strong> : code for this part and the next part is included in a single jupyter notebook: <a href= "https://github.com/shuhan-zhou/divvy_new/blob/master/Socioeconomic_Factors.ipynb"> Spatial and Regression Analysis </a>
+
 </p>
 
 
