--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -199,7 +199,7 @@ Overall, there are significantly more trips under taken by subscribers, males an
 </p>
 
 
-<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/TripDuration_byAge.png">
+<img src=/Users/shuhan_zhou/Documents/Github/divvy_new/figure/TripDuration_byAge.png>
 
 <p>
 
