--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -38,6 +38,7 @@ ul.nav li:hover {
   transition: 0.5s;
 }
 
+
 img {
   border: 10px;
   border-style: solid;
@@ -199,7 +200,7 @@ Overall, there are significantly more trips under taken by subscribers, males an
 </p>
 
 
-<img src="file:///Users/shuhan_zhou/Documents/GitHub/divvy_new/figure/TripDuration_byAge.png">
+<img src="file:///Users/shuhan_zhou/Documents/GitHub/divvy_new/figure/TripDuration_byAge.png", width="30%" align="right">
 
 <p>
 
