why is it still not right

--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -40,9 +40,9 @@ ul.nav li:hover {
 
 
 img {
-  border: 10px;
+  border: 0.1px;
   border-style: solid;
-  border-color: darkred;
+  border-color: grey;
   margin: 0px 40px;
 }
 
