--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -200,7 +200,7 @@ Overall, there are significantly more trips under taken by subscribers, males an
 </p>
 
 
-<img src="file:///Users/shuhan_zhou/Documents/GitHub/divvy_new/figure/TripDuration_byAge.png" width="270" height="130" ="right">
+<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/TripDuration_byAge.png" width="270" height="130" ="right">
 
 <p>
 
