relatvie file path

--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -200,7 +200,7 @@ Overall, there are significantly more trips under taken by subscribers, males an
 </p>
 
 
-<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/TripDuration_byAge.png" alt = "" width="250" height="130"/>
+<img src="figure/TripDuration_byAge.png" width="250" height="130"/>
 
 <p>
 
