--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -9,6 +9,8 @@
 
 body {margin: 0% 10%;}
 
+
+
 ul.nav {
   list-style-type: none;
   margin: 0px;
@@ -38,6 +40,7 @@ ul.nav li:hover {
   transition: 0.5s;
 }
 
+img {display:block}
 
 img {
   border: 0.1px;
