--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -40,7 +40,6 @@ ul.nav li:hover {
   transition: 0.5s;
 }
 
-img {display:block}
 
 img {
   border: 0.1px;
@@ -203,13 +202,13 @@ Overall, there are significantly more trips under taken by subscribers, males an
 </p>
 
 
-<img src="figure/TripDuration_byAge.png" width="250" height="130"/>
+<img src="file:///Users/shuhan_zhou/Documents/GitHub/divvy_new/figure/TripDuration_byAge.png" width="250" height="130"/>
 
 <p>
 
 Customers on average on each trip use divvy bikes 20 mins more than subscribers. Economic intuition can explain this phenomenon: once the "customer" paid their fees, it became a sunk cost, and they want to make the most out of this one time use. Whereas subscribers pay a monthly fee and use divvy bikes more regularly; they can benefit from the number of trips, not necessarily the duration of the trips.
 
-<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/TripDuration_byUserType.png">
+<img src="file:///Users/shuhan_zhou/Desktop/test.png" width="250" height="150">
 
 </p>
 
