--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -202,7 +202,7 @@ Overall, there are significantly more trips under taken by subscribers, males an
 </p>
 
 
-<img src="file:///Users/shuhan_zhou/Documents/GitHub/divvy_new/figure/TripDuration_byAge.png" width="250" height="130"/>
+<img src="test.png" width="250" height="130"/>
 
 <p>
 
