--- a/divvy_bike_project.html
+++ b/divvy_bike_project.html
@@ -202,23 +202,23 @@ Overall, there are significantly more trips under taken by subscribers, males an
 </p>
 
 
-<img src="/figure/TripDuration_byHour.png" width="250" height="130"/>
+<img src="/figure/TripDuration_byAge.png" width="300" height="230"/>
 
 <p>
 
 Customers on average on each trip use divvy bikes 20 mins more than subscribers. Economic intuition can explain this phenomenon: once the "customer" paid their fees, it became a sunk cost, and they want to make the most out of this one time use. Whereas subscribers pay a monthly fee and use divvy bikes more regularly; they can benefit from the number of trips, not necessarily the duration of the trips.
 
-<img src="file:///Users/shuhan_zhou/Desktop/test.png" width="250" height="150">
+<img src="/figure/TripDuration_byUserType.png" width="300" height="230">
 
 </p>
 
 
 <p> In terms of time when trips happen, people make more trips (i.e. use divvy bikes more) during weekdays, rush hours and in spring/summer. The seasonality is probably due to temperature since when it is nice and people will enjoy being outside. The data also suggests average trip duration significantly increase for spring and summer time. 
 
-<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/TripDuration_byHour.png">
-<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/Trip_Duration_by_Day.png">
-<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/Trip_Duration_by_Date.png">
-<img src="https://github.com/shuhan-zhou/divvy_new/blob/master/figure/Trip_Duration_by_Month.png">
+<img src="/figure/TripDuration_byHour.png" width="300" height="230" >
+<img src="/figure/Trip_Duration_by_Day.png" width="300" height="230">
+<img src="/figure/Trip_Duration_by_Date.png" width="300" height="230">
+<img src="/figure/Trip_Duration_by_Month.png" width="300" height="230">
 
 
 </p>
